Fixed footer layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,22 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;600;700&family=Playfair+Display:wght@400;600;700&display=swap");
+
+
+@theme {
+  --font-inter: "Inter", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --font-playfair: "Playfair Display", serif;
+}
 
 .menu-font {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
-
 :root {
   --color-bg: #f5f5dc;
-  --color-aboutbg : ##fffaf0;
+  --color-aboutbg : #f1eadd;
   --color-navy: #001f3f;
   --color-text: #333333;
-
 }
+
